--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             An Image</button>
         <div class="image-upload-wrap" tabindex="0">
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-            <h3 class="drag-text">Drag and drop a file or select add Image</h3>
+            <h3 class="drag-text">Drag and drop a file</h3>
         </div>
         <p><span>Current List image looks like this: </span> <img id="list-image" src="./BulletPoints/question-mark.png"
                 alt="uploaded image" /></p>
