--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List image style</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module"
-        src="https://unpkg.com/@deckdeckgo/highlight-code@latest/dist/deckdeckgo-highlight-code/deckdeckgo-highlight-code.esm.js"></script>
-
 </head>
 
 <body>
@@ -31,12 +28,10 @@
     </div>
 
     <!-- Code Snipped Start -->
-    <deckgo-highlight-code language="html">
-        <code slot="code">
-<li class="yourIconOnLeft"><span class="codeYouNeed" style="top:0; position:relative;">
-    You can copy the generated code from here.</span></li>
-        </code>
-    </deckgo-highlight-code>
+
+    <p class="yourIconOnLeft"><span class="codeYouNeed" style="top:0; position:relative;">
+            You can copy the generated code from here.</span></p>
+
     <!-- Code Snippet End -->
 
     <section class="file-upload">
