--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 
     <div class="codeSnippetOutput">
         <div>
-            &lt;<span class="color1">li</span><span class="color2">class</span>="<span
-                class="color3">yourIconOnLeft</span>"&gt;&lt;<span class="color1">span</span>
-            <span class="color2">class</span>="<span class="color3">codeThatYouNeed</span>" <span
-                class="color2">style</span>="<span class="color3">top:0;
-                position:relative;</span>"&gt;
+            <span class="color4">&lt;</span><span class="color1">li</span><span class="color2">class</span><span
+                class="color4">="</span><span class="color3">yourIconOnLeft</span><span
+                class="color4">"&gt;&lt;</span><span class="color1">span</span>
+            <span class="color2">class</span><span class="color4">="</span><span
+                class="color3">codeThatYouNeed</span><span class="color4">"</span> <span
+                class="color2">style</span><span class="color4">="</span><span class="color3">top:0;
+                position:relative;</span><span class="color4">"&gt;</span>
             You can copy the generated code from here.&lt;/<span class="color1">span</span>&gt;&lt;/<span
                 class="color1">li</span>&gt;
         </div>
