added a11y utils, tabindex, keybindings, input filter

--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List image style</title>
     <link rel="stylesheet" href="style.css">
-    <script type="module"
-        src="https://unpkg.com/@deckdeckgo/highlight-code@latest/dist/deckdeckgo-highlight-code/deckdeckgo-highlight-code.esm.js"></script>
-
-    <template id="template">
-        <li class="yourIconOnLeft"><span class="codeYouNeed" style="top:0; position:relative;">
-                You can copy the generated code from here.</span></li>
-    </template>
 </head>
 
 <body>
@@ -42,24 +35,21 @@
     </div>
 
     <!-- Code Snipped Start -->
-    <deckgo-highlight-code language="html">
-        <code slot="code">
-<li class="yourIconOnLeft"><span class="codeYouNeed" style="top:0; position:relative;">
-    You can copy the generated code from here.</span></li>
-        </code>
-    </deckgo-highlight-code>
-
     <div class="codeSnippetOutput">
-        <div>
-            <span class="color4">&lt;</span><span class="color1">li</span><span class="color2">class</span><span
+        <div class="snippet">
+            <p class="circles">
+                <span>𒊹</span><span>𒊹</span><span>𒊹</span>
+            </p>
+            <span class="color4">&lt;</span><span class="color1">li </span><span class="color2">class</span><span
                 class="color4">="</span><span class="color3">yourIconOnLeft</span><span
                 class="color4">"&gt;&lt;</span><span class="color1">span</span>
-            <span class="color2">class</span><span class="color4">="</span><span
-                class="color3">codeThatYouNeed</span><span class="color4">"</span> <span
-                class="color2">style</span><span class="color4">="</span><span class="color3">top:0;
-                position:relative;</span><span class="color4">"&gt;</span>
-            You can copy the generated code from here.&lt;/<span class="color1">span</span>&gt;&lt;/<span
-                class="color1">li</span>&gt;
+            <span class="color2">class</span><span class="color4">="</span><span class="color3">codeYouNeed</span><span
+                class="color4">"</span> <span class="color2">style</span><span class="color4">="</span><span
+                class="color3">top:0;
+                position:relative;</span><span class="color4">"&gt;</span><span class="algorithm">You can copy the
+                generated code from
+                here.</span><span class="color4">&lt;/</span><span class="color1">span</span><span
+                class="color4">&gt;&lt;/</span><span class="color1">li</span><span class="color4">&gt;</span>
         </div>
     </div>
     <!-- Code Snippet End -->
