--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <p class="circles">
                 <span>𒊹</span><span>𒊹</span><span>𒊹</span>
             </p>
+            <p class="clipboard">
+                <img src="clipboard.png" alt="" srcset="" height="20px"><span class="tick">✓</span>
+            </p>
             <span class="color4">&lt;</span><span class="color1">li </span><span class="color2">class</span><span
                 class="color4">="</span><span class="color3">yourIconOnLeft</span><span
                 class="color4">"&gt;&lt;</span><span class="color1">span</span>
@@ -68,5 +71,6 @@
 <script src="script.js"></script>
 <script src="input-filter.js"></script>
 <script src="key-binding.js"></script>
+<script src="Clipboard.js"></script>
 
 </html>
